--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-7">
+        <div class="col-md-7 mb-4">
           <div class="container">
             <form>
               <div class="row">
