--- a/panels.html
+++ b/panels.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Panels</title>
+    <link rel="stylesheet" href="css/manifest.css">
   </head>
-  <body>
-    
+  <body class="bg-lightgrey">
+    <main>
+        <article class="container">
+          <header class="article-heading">
+            <h2 class="article-heading-h2 font-weight-normal">Examples with mutliple background colours</h2>
+          </header>
+          <p class="panel bg-black text-white">Hello World</p>
+          <p class  ="panel bg-red text-white">Hello World</p>
+          <p class="panel bg-white">Hello World</p>
+        </article>
+    </main>
   </body>
 </html>
