Added some classes that align the element

--- a/app.html
+++ b/app.html
@@ -3,37 +3,46 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sports app</title>
     <link rel="stylesheet" href="./css/manifest.css">
   </head>
   <body>
-    <header class="container">
-      <div class="row">
-        <h1 class="col">
-          <img src="../front-end-assessment/webroot/img/logo_sports_colour.svg" alt="">
-        </h1>
+    <header class="bg-light">
+      <div class="container">
+        <div class="row">
+          <h1 class="col">
+            <img src="../front-end-assessment/webroot/img/logo_sports_colour.svg" alt="">
+          </h1>
+        </div>
+        
       </div>
       
     </header>
     <main>
-      <header class="container">
-        <div class="row">
-          <h2 class="col-md-6">
-            Get a personalized football experience tailored just for you
-          </h2>
-          <p>
-            Achieve super-fan status by getting tailored updates and up-to-the-minute information on your team.
-          </p>
-          <div class="container">
-            <ul class="row list-unstyled">
-              <li class="col-md-2">
-                <img src="../front-end-assessment/webroot/img/apple_store.svg" alt="">
-              </li>
-              <li class="col-md-2">
-                <img src="../front-end-assessment/webroot/img/google_play.svg" alt="">
-              </li>
-            </ul>
-          </div>
+      <header class="bg-light">
+        <div class="container">
+          <div class="row app">
+            <h2 class="col-md-6">
+              Get a personalized football experience tailored just for you
+            </h2>
+            <p class="desc text-shade-gray">
+              Achieve super-fan status by getting tailored updates and up-to-the-minute information on your team.
+            </p>
+            <div class="container">
+              <ul class="row list-unstyled">
+                <li class="col-sm-3">
+                  <a href="./apple_store">
+                    <img src="../front-end-assessment/webroot/img/apple_store.svg" alt="">
+                  </a>
+                </li>
+                <li class="col-sm-3">
+                  <a href="google_play">
+                    <img src="../front-end-assessment/webroot/img/google_play.svg" alt="">
+                  </a>
+                </li>
+              </ul>
+            </div>
+        </div>
         </div>
       </header>
     </main>
